--- a/End-end-bulldozer-regression.ipynb
+++ b/End-end-bulldozer-regression.ipynb
@@ -3723,7 +3723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -3935,7 +3935,7 @@
        "[5 rows x 52 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3988,7 +3988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4017,9 +4017,439 @@
     "        if not pd.api.types.is_numeric_dtype(content):\r\n",
     "            df[label+'_is_missing'] = pd.isnull(content)\r\n",
     "            #Ad plus one to category code because pandas enconde missing values as -1\r\n",
-    "            df[label] = pd.Categorical(content).code + 1\r\n",
+    "            df[label] = pd.Categorical(content).codes + 1\r\n",
+    "\r\n",
     "    return df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SalesID</th>\n",
+       "      <th>MachineID</th>\n",
+       "      <th>ModelID</th>\n",
+       "      <th>datasource</th>\n",
+       "      <th>auctioneerID</th>\n",
+       "      <th>YearMade</th>\n",
+       "      <th>MachineHoursCurrentMeter</th>\n",
+       "      <th>UsageBand</th>\n",
+       "      <th>fiModelDesc</th>\n",
+       "      <th>fiBaseModel</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Undercarriage_Pad_Width_is_missing</th>\n",
+       "      <th>Stick_Length_is_missing</th>\n",
+       "      <th>Thumb_is_missing</th>\n",
+       "      <th>Pattern_Changer_is_missing</th>\n",
+       "      <th>Grouser_Type_is_missing</th>\n",
+       "      <th>Backhoe_Mounting_is_missing</th>\n",
+       "      <th>Blade_Type_is_missing</th>\n",
+       "      <th>Travel_Controls_is_missing</th>\n",
+       "      <th>Differential_Type_is_missing</th>\n",
+       "      <th>Steering_Controls_is_missing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1227829</td>\n",
+       "      <td>1006309</td>\n",
+       "      <td>3168</td>\n",
+       "      <td>121</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1999</td>\n",
+       "      <td>3688.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>499</td>\n",
+       "      <td>180</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1227844</td>\n",
+       "      <td>1022817</td>\n",
+       "      <td>7271</td>\n",
+       "      <td>121</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>28555.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>831</td>\n",
+       "      <td>292</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1227847</td>\n",
+       "      <td>1031560</td>\n",
+       "      <td>22805</td>\n",
+       "      <td>121</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>6038.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1177</td>\n",
+       "      <td>404</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1227848</td>\n",
+       "      <td>56204</td>\n",
+       "      <td>1269</td>\n",
+       "      <td>121</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>8940.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>287</td>\n",
+       "      <td>113</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1227863</td>\n",
+       "      <td>1053887</td>\n",
+       "      <td>22312</td>\n",
+       "      <td>121</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>2286.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>566</td>\n",
+       "      <td>196</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 101 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   SalesID  MachineID  ModelID  datasource  auctioneerID  YearMade  \\\n",
+       "0  1227829    1006309     3168         121             3      1999   \n",
+       "1  1227844    1022817     7271         121             3      1000   \n",
+       "2  1227847    1031560    22805         121             3      2004   \n",
+       "3  1227848      56204     1269         121             3      2006   \n",
+       "4  1227863    1053887    22312         121             3      2005   \n",
+       "\n",
+       "   MachineHoursCurrentMeter  UsageBand  fiModelDesc  fiBaseModel  ...  \\\n",
+       "0                    3688.0          2          499          180  ...   \n",
+       "1                   28555.0          1          831          292  ...   \n",
+       "2                    6038.0          3         1177          404  ...   \n",
+       "3                    8940.0          1          287          113  ...   \n",
+       "4                    2286.0          2          566          196  ...   \n",
+       "\n",
+       "   Undercarriage_Pad_Width_is_missing  Stick_Length_is_missing  \\\n",
+       "0                                True                     True   \n",
+       "1                                True                     True   \n",
+       "2                               False                    False   \n",
+       "3                               False                    False   \n",
+       "4                                True                     True   \n",
+       "\n",
+       "   Thumb_is_missing  Pattern_Changer_is_missing  Grouser_Type_is_missing  \\\n",
+       "0              True                        True                     True   \n",
+       "1              True                        True                     True   \n",
+       "2             False                       False                    False   \n",
+       "3             False                       False                    False   \n",
+       "4              True                        True                     True   \n",
+       "\n",
+       "   Backhoe_Mounting_is_missing  Blade_Type_is_missing  \\\n",
+       "0                         True                   True   \n",
+       "1                         True                   True   \n",
+       "2                         True                   True   \n",
+       "3                         True                   True   \n",
+       "4                        False                  False   \n",
+       "\n",
+       "   Travel_Controls_is_missing  Differential_Type_is_missing  \\\n",
+       "0                        True                          True   \n",
+       "1                        True                         False   \n",
+       "2                        True                          True   \n",
+       "3                        True                          True   \n",
+       "4                       False                          True   \n",
+       "\n",
+       "   Steering_Controls_is_missing  \n",
+       "0                          True  \n",
+       "1                         False  \n",
+       "2                          True  \n",
+       "3                          True  \n",
+       "4                          True  \n",
+       "\n",
+       "[5 rows x 101 columns]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_test = preprocess_data(df_test)\r\n",
+    "\r\n",
+    "df_test.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'auctioneerID_is_missing'}"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set(X_train.columns) - set(df_test.columns) # auctioneerID is missing in df_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Adding auctioneer_id\r\n",
+    "df_test['auctioneerID_is_missing'] = False "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Finally making predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([18242.24883988, 16495.52850857, 52293.01336472, ...,\n",
+       "       16230.44569876, 20430.51475666, 30870.38834725])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Making predictions on test data\r\n",
+    "test_preds = ideal_model.predict(df_test)\r\n",
+    "\r\n",
+    "test_preds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SalesID</th>\n",
+       "      <th>SalePrice</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1227829</td>\n",
+       "      <td>18242.248840</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1227844</td>\n",
+       "      <td>16495.528509</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1227847</td>\n",
+       "      <td>52293.013365</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1227848</td>\n",
+       "      <td>60797.610938</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1227863</td>\n",
+       "      <td>47314.638720</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12452</th>\n",
+       "      <td>6643171</td>\n",
+       "      <td>43323.178256</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12453</th>\n",
+       "      <td>6643173</td>\n",
+       "      <td>14406.518769</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12454</th>\n",
+       "      <td>6643184</td>\n",
+       "      <td>16230.445699</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12455</th>\n",
+       "      <td>6643186</td>\n",
+       "      <td>20430.514757</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12456</th>\n",
+       "      <td>6643196</td>\n",
+       "      <td>30870.388347</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>12457 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       SalesID     SalePrice\n",
+       "0      1227829  18242.248840\n",
+       "1      1227844  16495.528509\n",
+       "2      1227847  52293.013365\n",
+       "3      1227848  60797.610938\n",
+       "4      1227863  47314.638720\n",
+       "...        ...           ...\n",
+       "12452  6643171  43323.178256\n",
+       "12453  6643173  14406.518769\n",
+       "12454  6643184  16230.445699\n",
+       "12455  6643186  20430.514757\n",
+       "12456  6643196  30870.388347\n",
+       "\n",
+       "[12457 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Format prediction into pandas dataframe\r\n",
+    "df_preds = pd.DataFrame()\r\n",
+    "df_preds['SalesID'] = df_test['SalesID']\r\n",
+    "df_preds['SalePrice'] = test_preds\r\n",
+    "\r\n",
+    "df_preds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
